--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.0"
+    "react-router-dom": "^6.21.0",
+    "axios": "^1.6.0",
+    "react-icons": "^5.0.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
